#38 All get one meal in admin path
